Fix emoji picker emojis overflowing to the preview section below

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -1770,7 +1770,8 @@ body .emoji-picker {
 }
 
 .emoji-picker .emoji-picker__preview {
-    padding-top: 1.5em 1em;
+    margin-top: .5em;
+    padding: 1.5em 1em;
     border-top: 1px solid #999999;
     border-top: 1px solid var(--emoji-picker-border-color);
 }
